SOE-3276: Banner overlay: button in wysiwyg not responsive scaling codeclimate fixes

--- a/scss/components/_soe_beans.scss
+++ b/scss/components/_soe_beans.scss
@@ -393,26 +393,26 @@
         font-size: 22px;
         line-height: 1.2em;
       }
-    }
 
-    h2 a {
-      text-decoration-color: $turquoise;
+      a {
+        text-decoration-color: $turquoise;
 
-      &:hover {
-        text-decoration-color: $primary-color;
+        &:hover {
+          text-decoration-color: $primary-color;
+        }
       }
     }
 
     h3 {
       font-family: $primary-font;
       margin-top: 1em 0 0.3em;
-    }
 
-    h3 a {
-      text-decoration-color: $turquoise;
+      a {
+        text-decoration-color: $turquoise;
 
-      &:hover {
-        text-decoration-color: $primary-color;
+        &:hover {
+          text-decoration-color: $primary-color;
+        }
       }
     }
 
